--- a/build.gradle
+++ b/build.gradle
@@ -182,6 +182,22 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         cordapp project(':workflows')
         rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
     }
+
+    node {
+        name "O=NodeC,L=Tokyo,C=JP"
+        p2pPort 10009
+        rpcSettings {
+            address("localhost:10010")
+            adminAddress("localhost:10050")
+        }
+
+        cordapp("$tokens_release_group:tokens-contracts:$tokens_release_version")
+        cordapp("$tokens_release_group:tokens-workflows:$tokens_release_version")
+        cordapp("$tokens_release_group:tokens-money:$tokens_release_version")
+        cordapp project(':contracts')
+        cordapp project(':workflows')
+        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
+    }
 }
 task installQuasar(type: Copy) {
     destinationDir rootProject.file("lib")
