--- a/clients/build.gradle
+++ b/clients/build.gradle
@@ -59,3 +59,9 @@ task runTemplateServerPartyB(type: JavaExec, dependsOn: assemble) {
     main = 'com.sorda.webserver.ServerKt'
     args '--server.port=10051', '--config.rpc.host=localhost', '--config.rpc.port=10009', '--config.rpc.username=user1', '--config.rpc.password=test'
 }
+
+task runTemplateServerPartyC(type: JavaExec, dependsOn: assemble) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'com.sorda.webserver.ServerKt'
+    args '--server.port=10052', '--config.rpc.host=localhost', '--config.rpc.port=10010', '--config.rpc.username=user1', '--config.rpc.password=test'
+}
